# kde2-kdelibs

./: CMakeLists.txt  config.h.in
arts/flow/: audioioalsa9.cc  audiosubsys.cc
arts/mcop/: CMakeLists.txt  md5auth.cc  socketconnection.cc
arts/mcopidl/: mcopidl.cc
arts/soundserver/: Makefile.am  artsd.cc  artswrapper.c
cmake/: kde2.cmake  kde2_configure.cmake
dcop/: CMakeLists.txt  dcopc.c  dcopglobal.h  dcopserver.cpp
kdecore/: fakes.c  kaboutdata.cpp  kapp.cpp  kcharsets.cpp  kconfigbackend.cpp  kconfigbase.cpp  kde-config.cpp.in  kdebug.cpp  kiconloader.cpp  klocale.cpp  kprocio.cpp  krootprop.cpp  ksocks.cpp  kstddirs.cpp  kstringhandler.cpp  ksycoca.cpp  kurl.cpp  netsupp.h
kdecore/tests/: CMakeLists.txt  kconfigtest.cpp  ksocktest.cpp  kstringhandlertest.cpp
kdeprint/: CMakeLists.txt
kdeprint/management/: smbview.cpp
kdeui/: CMakeLists.txt  kimageeffect.cpp  kpixmapio.cpp  ktoolbarbutton.cpp
kdeui/tests/: CMakeLists.txt
kdoctools/customization/no-NY/: lang.entities
kfile/: CMakeLists.txt  kdiroperator.cpp  kpropsdlg.h
khtml/: CMakeLists.txt
khtml/ecma/: kjs_html.cpp
khtml/java/: CMakeLists.txt
khtml/misc/: loader_jpeg.cpp
khtml/rendering/: render_form.cpp  render_list.cpp  render_text.cpp
khtml/xml/: dom_nodeimpl.cpp
kimgio/: eps.cpp  tiffr.cpp  xview.cpp
kinit/: lnusertemp.c  wrapper.c
kio/: CMakeLists.txt  job.cpp  kmimemagic.cpp  kmimetype.cpp  kurifilter.cpp  kurifilter.h  kuserprofile.cpp  slavebase.cpp
kio/ftp/: ftp.cc
kio/http/: http.cc
kio/http/kcookiejar/: kcookiejar.cpp  kcookiewin.cpp
kio/kded/: khostname.cpp
kio/tests/: CMakeLists.txt  kurifiltertest.cpp
kjs/: CMakeLists.txt  date_object.cpp  regexp.cpp  regexp.h
kspell/: ksconfig.cpp
kssl/: kopenssl.cc  kopenssl.h  ksslcertificate.cc
libkmid/: alsaout.cc  deviceman.cc
licenses/: CMakeLists.txt
